# estilo-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 528e4bddb7a3_mensagem_da_migracao.py  935c371e7ed1_add_tokens_table.py  add_timestamps_to_clients.py  bc9d3fd1022e_add_table_client.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: auth.py  clients.py  orders.py  products.py  whatsapp.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: client.py  order.py  order_item.py  product.py  token.py  user.py
app/schemas/: client.py  order.py  pagination.py  product.py  token.py  user.py  whatsapp.py
app/services/: auth.py  client.py  order.py  product.py  whatsapp.py
tests/: conftest.py
tests/api/: test_auth.py  test_clients.py  test_orders.py  test_products.py
tests/services/: test_auth_service.py  test_client_service.py  test_order_service.py  test_product_service.py
